--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-patterns'
 include 'kodilla-JDBC'
 include 'kodilla-hibernate'
 include 'kodilla-rps'
+include 'kodilla_patterns2'
 
